// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhookEditModal should match a snapshot 1`] = `
<Component
  renderChildren={true}
  visible={true}
>
  <Connect(Component)
    appId=""
    isUpdate={false}
  />
</Component>
`;

exports[`WebhookEditModal should match a snapshot 2`] = `
<Component
  renderChildren={true}
  visible={true}
>
  <Connect(Component)
    appId=""
    isUpdate={true}
  />
</Component>
`;

exports[`WebhookEditModal should match a snapshot 3`] = `""`;

exports[`WebhookEditModal should match a snapshot 4`] = `""`;

exports[`WebhookEditModal should match a snapshot 5`] = `
<Formik
  initialValues={
    Object {
      "active": false,
      "customerIds": Array [],
      "topicIds": Array [],
      "url": "",
    }
  }
  onSubmit={[Function]}
>
  <Component />
</Formik>
`;
